--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-logging.level.org.springframework = DEBUG
+#logging.level.org.springframework = DEBUG
+logging.level.org.springframework = info
+management.security.enabled=false
+security.user.name=username
+security.user.password=password
