Adding Entity to the service, creating h2 database, storing data in H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ logging.level.org.springframework = info
 management.security.enabled=false
 security.user.name=username
 security.user.password=password
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
